Various more things
Built-In Skills for equipment now

JSON's for Perk Items now