@@ -1,10 +1,10 @@
 package dot.lighteater.lights_perks.item.custom;
 
-import com.github.alexthe666.citadel.repack.jcodec.common.DictionaryCompressor;
 import dot.lighteater.lights_perks.perk.IPerkItem;
+import dot.lighteater.lights_perks.perk.PerkData;
+import dot.lighteater.lights_perks.perk.PerkLoader;
 import dot.lighteater.lights_perks.skill.SkillData;
 import dot.lighteater.lights_perks.skill.SkillManager;
-import net.minecraft.ChatFormatting;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.Item;
@@ -13,35 +13,63 @@ import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.level.Level;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
-public class StarPowerPerkItem extends Item implements IPerkItem {
-    public StarPowerPerkItem(Properties pProperties) {
-        super(pProperties);
+public class PerkItem extends Item implements IPerkItem {
+
+    private final ResourceLocation perkId;
+
+    public PerkItem(
+            Properties properties,
+            ResourceLocation perkId
+    ) {
+        super(properties);
+
+        this.perkId = perkId;
     }
 
-    @Override
-    public ResourceLocation getSkillId() {
-        return new ResourceLocation("lights_perks", "star_power");
+    public ResourceLocation getPerkId() {
+        return perkId;
     }
 
-    @Override
-    public int getSkillPoints() {
-        return 2;
+    public PerkData getPerkData() {
+        return PerkLoader.get(perkId);
     }
 
-    @Override
     public int getLevel() {
-        return 4;
+
+        PerkData data = getPerkData();
+
+        if (data == null) {
+            return 0;
+        }
+
+        return data.level;
     }
 
-    @Override
     public Map<ResourceLocation, Integer> getSkills() {
-        return Map.of(
-                new ResourceLocation("lights_perks", "star_power"), 2,
-                new ResourceLocation("lights_perks", "attack_up"), 1
-        );
+
+        PerkData data = getPerkData();
+
+        if (data == null || data.skills == null) {
+            return Collections.emptyMap();
+        }
+
+        Map<ResourceLocation, Integer> result =
+                new java.util.HashMap<>();
+
+        for (Map.Entry<String, Integer> entry
+                : data.skills.entrySet()) {
+
+            result.put(
+                    new ResourceLocation(entry.getKey()),
+                    entry.getValue()
+            );
+        }
+
+        return result;
     }
 
     @Override
